--- a/ModeloDeReferencia.DTO/ModeloDeReferencia.DTO.csproj
+++ b/ModeloDeReferencia.DTO/ModeloDeReferencia.DTO.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Categoria.cs" />
+    <Compile Include="NivelMaturidade.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
