--- a/ModeloDeReferencia.BLL/ModeloDeReferencia.BLL.csproj
+++ b/ModeloDeReferencia.BLL/ModeloDeReferencia.BLL.csproj
@@ -45,6 +45,8 @@
     <Compile Include="Interfaces\IAreaProcessoBLL.cs" />
     <Compile Include="Interfaces\ICategoriaBLL.cs" />
     <Compile Include="Interfaces\INivelMaturidadeBLL.cs" />
+    <Compile Include="Interfaces\IProdutoTrabalhoBLL.cs" />
+    <Compile Include="Interfaces\ProdutoTrabalhoBLL.cs" />
     <Compile Include="NivelMaturidadeBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
