--- a/ModeloDeReferencia.DAL/ModeloDeReferencia.DAL.csproj
+++ b/ModeloDeReferencia.DAL/ModeloDeReferencia.DAL.csproj
@@ -50,6 +50,8 @@
     <Compile Include="Intefaces\ICategoriaDAL.cs" />
     <Compile Include="Intefaces\INivelMaturidadeDAL.cs" />
     <Compile Include="Intefaces\IProdutoTrabalhoDAL.cs" />
+    <Compile Include="Intefaces\IMetaEspecificaDAL.cs" />
+    <Compile Include="MetaEspecificaDAL.cs" />
     <Compile Include="MyConnection.cs" />
     <Compile Include="NivelMaturidadeDAL.cs" />
     <Compile Include="ProdutoTrabalhoDAL.cs" />
