--- a/ModeloDeReferencia.DTO/ModeloDeReferencia.DTO.csproj
+++ b/ModeloDeReferencia.DTO/ModeloDeReferencia.DTO.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="AreaProcesso.cs" />
     <Compile Include="Categoria.cs" />
+    <Compile Include="MetaEspecifica.cs" />
     <Compile Include="NivelMaturidade.cs" />
     <Compile Include="ProdutoTrabalho.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
