--- a/ModeloDeReferencia.UI/ModeloDeReferencia.UI.csproj
+++ b/ModeloDeReferencia.UI/ModeloDeReferencia.UI.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Controllers\AreaProcessoController.cs" />
     <Compile Include="Controllers\CategoriaController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MetaEpecificaController.cs" />
     <Compile Include="Controllers\NivelMaturidadeController.cs" />
     <Compile Include="Controllers\ProdutoTrabalhoController.cs" />
     <Compile Include="Global.asax.cs">
@@ -156,6 +157,7 @@
     <Content Include="Angular\Controllers\AreaProcessoController.js" />
     <Content Include="Angular\Controllers\CategoriaController.js" />
     <Content Include="Angular\Controllers\HomeController.js" />
+    <Content Include="Angular\Controllers\MetaEspecificaController.js" />
     <Content Include="Angular\Controllers\NivelMaturidadeController.js" />
     <Content Include="Angular\Controllers\ProdutoTrabalhoController.js" />
     <Content Include="Angular\Directives\datepickerField.js" />
@@ -165,6 +167,7 @@
     <Content Include="Angular\Factories\url.js" />
     <Content Include="Angular\Services\AreaProcessoService.js" />
     <Content Include="Angular\Services\CategoriaService.js" />
+    <Content Include="Angular\Services\MetaEspecificaService.js" />
     <Content Include="Angular\Services\NivelMaturidadeService.js" />
     <Content Include="Angular\Services\ProdutoTrabalhoService.js" />
     <Content Include="Angular\Views\AreaProcesso\Index.html" />
@@ -172,6 +175,8 @@
     <Content Include="Angular\Views\Categoria\Index.html" />
     <Content Include="Angular\Views\Categoria\ModalEdit.html" />
     <Content Include="Angular\Views\Home\Index.html" />
+    <Content Include="Angular\Views\MetaEspecifica\Index.html" />
+    <Content Include="Angular\Views\MetaEspecifica\ModalEdit.html" />
     <Content Include="Angular\Views\NivelMaturidade\Index.html" />
     <Content Include="Angular\Views\NivelMaturidade\ModalEdit.html" />
     <Content Include="Angular\Views\ProdutoTrabalho\Index.html" />
