--- a/ModeloDeReferencia.BLL/ModeloDeReferencia.BLL.csproj
+++ b/ModeloDeReferencia.BLL/ModeloDeReferencia.BLL.csproj
@@ -46,8 +46,10 @@
     <Compile Include="Interfaces\ICategoriaBLL.cs" />
     <Compile Include="Interfaces\IMetaEspecificaBLL..cs" />
     <Compile Include="Interfaces\INivelMaturidadeBLL.cs" />
+    <Compile Include="Interfaces\IPraticaEspecificaBLL.cs" />
     <Compile Include="Interfaces\IProdutoTrabalhoBLL.cs" />
     <Compile Include="MetaEspecificaBLL.cs" />
+    <Compile Include="PraticaEspecificaBLL.cs" />
     <Compile Include="ProdutoTrabalhoBLL.cs" />
     <Compile Include="NivelMaturidadeBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
