--- a/ModeloDeReferencia.UI/ModeloDeReferencia.UI.csproj
+++ b/ModeloDeReferencia.UI/ModeloDeReferencia.UI.csproj
@@ -146,6 +146,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MetaEpecificaController.cs" />
     <Compile Include="Controllers\NivelMaturidadeController.cs" />
+    <Compile Include="Controllers\PraticaEspecificaController.cs" />
     <Compile Include="Controllers\ProdutoTrabalhoController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -159,6 +160,7 @@
     <Content Include="Angular\Controllers\HomeController.js" />
     <Content Include="Angular\Controllers\MetaEspecificaController.js" />
     <Content Include="Angular\Controllers\NivelMaturidadeController.js" />
+    <Content Include="Angular\Controllers\PraticaEspecificaController.js" />
     <Content Include="Angular\Controllers\ProdutoTrabalhoController.js" />
     <Content Include="Angular\Directives\datepickerField.js" />
     <Content Include="Angular\Directives\dirPagination.js" />
@@ -169,6 +171,7 @@
     <Content Include="Angular\Services\CategoriaService.js" />
     <Content Include="Angular\Services\MetaEspecificaService.js" />
     <Content Include="Angular\Services\NivelMaturidadeService.js" />
+    <Content Include="Angular\Services\PraticaEspecificaService.js" />
     <Content Include="Angular\Services\ProdutoTrabalhoService.js" />
     <Content Include="Angular\Views\AreaProcesso\Index.html" />
     <Content Include="Angular\Views\AreaProcesso\ModalEdit.html" />
@@ -179,6 +182,8 @@
     <Content Include="Angular\Views\MetaEspecifica\ModalEdit.html" />
     <Content Include="Angular\Views\NivelMaturidade\Index.html" />
     <Content Include="Angular\Views\NivelMaturidade\ModalEdit.html" />
+    <Content Include="Angular\Views\PraticaEspecifica\Index.html" />
+    <Content Include="Angular\Views\PraticaEspecifica\ModalEdit.html" />
     <Content Include="Angular\Views\ProdutoTrabalho\Index.html" />
     <Content Include="Angular\Views\ProdutoTrabalho\ModalEdit.html" />
     <Content Include="Angular\Views\Util\ConfirmationModal.html" />
