--- a/ModeloDeReferencia.DAL/ModeloDeReferencia.DAL.csproj
+++ b/ModeloDeReferencia.DAL/ModeloDeReferencia.DAL.csproj
@@ -49,11 +49,13 @@
     <Compile Include="Intefaces\IAreaProcessoDAL.cs" />
     <Compile Include="Intefaces\ICategoriaDAL.cs" />
     <Compile Include="Intefaces\INivelMaturidadeDAL.cs" />
+    <Compile Include="Intefaces\IPraticaEspecificaDAL.cs" />
     <Compile Include="Intefaces\IProdutoTrabalhoDAL.cs" />
     <Compile Include="Intefaces\IMetaEspecificaDAL.cs" />
     <Compile Include="MetaEspecificaDAL.cs" />
     <Compile Include="MyConnection.cs" />
     <Compile Include="NivelMaturidadeDAL.cs" />
+    <Compile Include="PraticaEspecificaDAL.cs" />
     <Compile Include="ProdutoTrabalhoDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
