--- a/ModeloDeReferencia.DAL/ModeloDeReferencia.DAL.csproj
+++ b/ModeloDeReferencia.DAL/ModeloDeReferencia.DAL.csproj
@@ -48,11 +48,13 @@
     <Compile Include="CategoriaDAL.cs" />
     <Compile Include="Intefaces\IAreaProcessoDAL.cs" />
     <Compile Include="Intefaces\ICategoriaDAL.cs" />
+    <Compile Include="Intefaces\IModeloDAL.cs" />
     <Compile Include="Intefaces\INivelMaturidadeDAL.cs" />
     <Compile Include="Intefaces\IPraticaEspecificaDAL.cs" />
     <Compile Include="Intefaces\IProdutoTrabalhoDAL.cs" />
     <Compile Include="Intefaces\IMetaEspecificaDAL.cs" />
     <Compile Include="MetaEspecificaDAL.cs" />
+    <Compile Include="ModeloDAL.cs" />
     <Compile Include="MyConnection.cs" />
     <Compile Include="NivelMaturidadeDAL.cs" />
     <Compile Include="PraticaEspecificaDAL.cs" />
