--- a/ModeloDeReferencia.DTO/ModeloDeReferencia.DTO.csproj
+++ b/ModeloDeReferencia.DTO/ModeloDeReferencia.DTO.csproj
@@ -43,6 +43,7 @@
     <Compile Include="AreaProcesso.cs" />
     <Compile Include="Categoria.cs" />
     <Compile Include="MetaEspecifica.cs" />
+    <Compile Include="Modelo.cs" />
     <Compile Include="NivelMaturidade.cs" />
     <Compile Include="PraticaEspecifica.cs" />
     <Compile Include="ProdutoTrabalho.cs" />
