--- a/ModeloDeReferencia.UI/ModeloDeReferencia.UI.csproj
+++ b/ModeloDeReferencia.UI/ModeloDeReferencia.UI.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Controllers\CategoriaController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MetaEpecificaController.cs" />
+    <Compile Include="Controllers\ModeloController.cs" />
     <Compile Include="Controllers\NivelMaturidadeController.cs" />
     <Compile Include="Controllers\PraticaEspecificaController.cs" />
     <Compile Include="Controllers\ProdutoTrabalhoController.cs" />
@@ -159,6 +160,7 @@
     <Content Include="Angular\Controllers\CategoriaController.js" />
     <Content Include="Angular\Controllers\HomeController.js" />
     <Content Include="Angular\Controllers\MetaEspecificaController.js" />
+    <Content Include="Angular\Controllers\ModeloController.js" />
     <Content Include="Angular\Controllers\NivelMaturidadeController.js" />
     <Content Include="Angular\Controllers\PraticaEspecificaController.js" />
     <Content Include="Angular\Controllers\ProdutoTrabalhoController.js" />
@@ -170,6 +172,7 @@
     <Content Include="Angular\Services\AreaProcessoService.js" />
     <Content Include="Angular\Services\CategoriaService.js" />
     <Content Include="Angular\Services\MetaEspecificaService.js" />
+    <Content Include="Angular\Services\ModeloService.js" />
     <Content Include="Angular\Services\NivelMaturidadeService.js" />
     <Content Include="Angular\Services\PraticaEspecificaService.js" />
     <Content Include="Angular\Services\ProdutoTrabalhoService.js" />
@@ -180,6 +183,8 @@
     <Content Include="Angular\Views\Home\Index.html" />
     <Content Include="Angular\Views\MetaEspecifica\Index.html" />
     <Content Include="Angular\Views\MetaEspecifica\ModalEdit.html" />
+    <Content Include="Angular\Views\Modelo\Index.html" />
+    <Content Include="Angular\Views\Modelo\ModalEdit.html" />
     <Content Include="Angular\Views\NivelMaturidade\Index.html" />
     <Content Include="Angular\Views\NivelMaturidade\ModalEdit.html" />
     <Content Include="Angular\Views\PraticaEspecifica\Index.html" />
