--- a/ModeloDeReferencia.DAL/ModeloDeReferencia.DAL.csproj
+++ b/ModeloDeReferencia.DAL/ModeloDeReferencia.DAL.csproj
@@ -48,6 +48,7 @@
     <Compile Include="CategoriaDAL.cs" />
     <Compile Include="Intefaces\IAreaProcessoDAL.cs" />
     <Compile Include="Intefaces\ICategoriaDAL.cs" />
+    <Compile Include="Intefaces\IMetaGenericaDAL.cs" />
     <Compile Include="Intefaces\IModeloDAL.cs" />
     <Compile Include="Intefaces\INivelCapacidadeDAL.cs" />
     <Compile Include="Intefaces\INivelMaturidadeDAL.cs" />
@@ -55,6 +56,7 @@
     <Compile Include="Intefaces\IProdutoTrabalhoDAL.cs" />
     <Compile Include="Intefaces\IMetaEspecificaDAL.cs" />
     <Compile Include="MetaEspecificaDAL.cs" />
+    <Compile Include="MetaGenericaDAL.cs" />
     <Compile Include="ModeloDAL.cs" />
     <Compile Include="MyConnection.cs" />
     <Compile Include="NivelCapacidadeDAL.cs" />
