--- a/ModeloDeReferencia.UI/ModeloDeReferencia.UI.csproj
+++ b/ModeloDeReferencia.UI/ModeloDeReferencia.UI.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Controllers\CategoriaController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MetaEpecificaController.cs" />
+    <Compile Include="Controllers\MetaGenericaController.cs" />
     <Compile Include="Controllers\ModeloController.cs" />
     <Compile Include="Controllers\NivelCapacidadeController.cs" />
     <Compile Include="Controllers\NivelMaturidadeController.cs" />
@@ -161,6 +162,7 @@
     <Content Include="Angular\Controllers\CategoriaController.js" />
     <Content Include="Angular\Controllers\HomeController.js" />
     <Content Include="Angular\Controllers\MetaEspecificaController.js" />
+    <Content Include="Angular\Controllers\MetaGenericaController.js" />
     <Content Include="Angular\Controllers\ModeloController.js" />
     <Content Include="Angular\Controllers\NivelCapacidadeController.js" />
     <Content Include="Angular\Controllers\NivelMaturidadeController.js" />
@@ -174,6 +176,7 @@
     <Content Include="Angular\Services\AreaProcessoService.js" />
     <Content Include="Angular\Services\CategoriaService.js" />
     <Content Include="Angular\Services\MetaEspecificaService.js" />
+    <Content Include="Angular\Services\MetaGenericaService.js" />
     <Content Include="Angular\Services\ModeloService.js" />
     <Content Include="Angular\Services\NivelCapacidadeService.js" />
     <Content Include="Angular\Services\NivelMaturidadeService.js" />
@@ -186,6 +189,8 @@
     <Content Include="Angular\Views\Home\Index.html" />
     <Content Include="Angular\Views\MetaEspecifica\Index.html" />
     <Content Include="Angular\Views\MetaEspecifica\ModalEdit.html" />
+    <Content Include="Angular\Views\MetaGenerica\Index.html" />
+    <Content Include="Angular\Views\MetaGenerica\ModalEdit.html" />
     <Content Include="Angular\Views\Modelo\Index.html" />
     <Content Include="Angular\Views\Modelo\ModalEdit.html" />
     <Content Include="Angular\Views\NivelCapacidade\Index.html" />
