--- a/ModeloDeReferencia.BLL/ModeloDeReferencia.BLL.csproj
+++ b/ModeloDeReferencia.BLL/ModeloDeReferencia.BLL.csproj
@@ -45,12 +45,14 @@
     <Compile Include="Interfaces\IAreaProcessoBLL.cs" />
     <Compile Include="Interfaces\ICategoriaBLL.cs" />
     <Compile Include="Interfaces\IMetaEspecificaBLL..cs" />
+    <Compile Include="Interfaces\IMetaGenericaBLL.cs" />
     <Compile Include="Interfaces\IModeloBLL.cs" />
     <Compile Include="Interfaces\INivelCapacidadeBLL.cs" />
     <Compile Include="Interfaces\INivelMaturidadeBLL.cs" />
     <Compile Include="Interfaces\IPraticaEspecificaBLL.cs" />
     <Compile Include="Interfaces\IProdutoTrabalhoBLL.cs" />
     <Compile Include="MetaEspecificaBLL.cs" />
+    <Compile Include="MetaGenericaBLL.cs" />
     <Compile Include="ModeloBLL.cs" />
     <Compile Include="NivelCapacidadeBLL.cs" />
     <Compile Include="PraticaEspecificaBLL.cs" />
