--- a/ModeloDeReferencia.DTO/ModeloDeReferencia.DTO.csproj
+++ b/ModeloDeReferencia.DTO/ModeloDeReferencia.DTO.csproj
@@ -50,6 +50,7 @@
     <Compile Include="PraticaEspecifica.cs" />
     <Compile Include="ProdutoTrabalho.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Template.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
@@ -64,6 +65,7 @@
     <Content Include="Database\Tables\pratica_especifica.sql" />
     <Content Include="Database\Tables\pratica_produto.sql" />
     <Content Include="Database\Tables\produto_trabalho.sql" />
+    <Content Include="Database\Tables\template.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
